fix bad wrapping with whitespace: nowrap on msg_menu

--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ input[type=checkbox] { width: 18px; height: 18px; margin: 1px 3px 1px 3px; paddi
 }
 .msg { display: flex; margin: 3px; font-family: var(--disc-font); }
 .msg_timestamp { border-radius: 18px; color: var(--msg_timestamp_color); font-family: var(--time-font); }
+.msg_menu { white-space: nowrap; overflow-x: hidden; }
 .msg_content {
   padding: 7px 12px 8px 12px;
   border-radius: 18px;
